# dbserv

data/: Makefile.am
src/: Makefile  Makefile.am  client-bindings.h  server-bindings.h  server.c  servicename-infos.xml
